cp3-networkpolicy/egress/services/bedrock-egress-allow-operator-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bedrock-egress-allow-operator-ns
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "opNamespace"
      podSelector: {}
  podSelector: {}    
  policyTypes:
  - Egress
