cp3-networkpolicy/egress/services/bedrock-egress-edb-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
  name: egress-edb-postgres
  namespace: "csNamespace"
spec:
  podSelector:
    matchExpressions:
    - key: k8s.enterprisedb.io/cluster
      operator: Exists
  policyTypes:
  - Egress
  egress:
  - {}
