cp3-networkpolicy/egress/services/zen-egress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-nginx
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "ibm-nginx"
  policyTypes:
  - Egress
  egress:
  - {}
