cp3-networkpolicy/egress/services/zen-egress-usermgmt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-usermgmt
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "usermgmt"
  policyTypes:
  - Egress 
  egress:
  - {}
