cp3-networkpolicy/egress/services/zen-egress-zen-metastoredb-init-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-zen-metastoredb-init-job
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "metastoredb-init-job"
  policyTypes:
  - Egress
  egress:
  - {}
