cp3-networkpolicy/egress/services/zen-egress-zen-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-zen-minio
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "zen-minio"
  policyTypes:
  - Egress
  egress:
  - {}
